--- a/app/src/main/res/drawable/radio_responsibility.xml
+++ b/app/src/main/res/drawable/radio_responsibility.xml
@@ -3,7 +3,7 @@
     <item android:state_pressed="false">
         <shape android:shape="rectangle">
             <corners android:radius="5dp" />
-            <solid android:color="@color/selectedResponsibility" />
+            <solid android:color="#26A69A" />
             <padding android:bottom="4dp" android:left="4dp" android:right="4dp" android:top="4dp" />
         </shape>
 
