--- a/app/src/main/res/drawable/custom_input.xml
+++ b/app/src/main/res/drawable/custom_input.xml
@@ -2,15 +2,15 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_enabled="true" android:state_focused="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/unselectedEditText" />
+            <solid android:color="#4A604B" />
             <corners android:radius="20px" />
-            <stroke android:color="@color/lightPurple" android:width="3dp"/>
+            <stroke android:color="#26A69A" android:width="3dp"/>
         </shape>
     </item>
 
     <item android:state_enabled="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/unselectedEditText"/>
+            <solid android:color="#4A604B"/>
             <corners android:radius="20px"/>
         </shape>
     </item>
