--- a/app/src/main/res/drawable/radio_unselected.xml
+++ b/app/src/main/res/drawable/radio_unselected.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/unselectedButton" />
+    <solid android:color="#24615C" />
     <corners android:radius="5dp" />
 </shape>
