--- a/app/src/main/res/layout/activity_note_info.xml
+++ b/app/src/main/res/layout/activity_note_info.xml
@@ -9,7 +9,10 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:focusable="true"
+        android:focusableInTouchMode="true">
 
 
         <EditText
