--- a/app/src/main/res/layout/activity_subjects_view.xml
+++ b/app/src/main/res/layout/activity_subjects_view.xml
@@ -12,98 +12,23 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="32dp"
-        android:backgroundTint="@color/selectedResponsibility"
+        android:backgroundTint="@color/statsColor"
         android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/ic_custom_add" />
-
-    <EditText
-        android:id="@+id/searchBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="20dp"
-        android:background="@drawable/custom_input"
-        android:ems="10"
-        android:gravity="center"
-        android:hint="Szukaj..."
-        android:inputType="textPersonName"
-        android:padding="12dp"
-        android:textAlignment="center"
-        android:textColor="@color/textColor"
-        android:textColorHint="@color/hintColor"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
-
-    <RadioGroup
-        android:id="@+id/importanceRadioGroup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/searchBar">
-
-        <RadioButton
-            android:id="@+id/normalImportance"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:layout_margin="16dp"
-            android:background="@drawable/radio_normal_selector"
-            android:button="@android:color/transparent"
-            android:padding="16dp" />
-
-        <RadioButton
-            android:id="@+id/mediumImportance"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:layout_margin="16dp"
-            android:background="@drawable/radio_medium_selector"
-            android:button="@android:color/transparent"
-            android:padding="16dp" />
-
-        <RadioButton
-            android:id="@+id/highImportance"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:layout_margin="16dp"
-            android:background="@drawable/radio_high_selector"
-            android:button="@android:color/transparent"
-            android:padding="16dp" />
-
-    </RadioGroup>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/subjectsRV"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="24dp"
         android:layout_marginEnd="10dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/importanceRadioGroup"
-        app:layout_constraintVertical_bias="0.075" />
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
-        android:text="PRZEDMIOTY"
-        android:textColor="@color/textColor"
-        android:textSize="30sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
