--- a/app/src/main/res/layout/activity_add_responsibility.xml
+++ b/app/src/main/res/layout/activity_add_responsibility.xml
@@ -190,6 +190,21 @@
 
         </RadioGroup>
 
+        <Button
+            android:id="@+id/filePicker"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="60dp"
+            android:background="@drawable/custom_button2"
+            android:text="Wybierz plik"
+            android:padding="15dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/hintColor"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/importanceRadioGroup" />
+
         <TextView
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
@@ -224,7 +239,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="36dp"
             android:layout_marginEnd="20dp"
             android:background="@drawable/custom_textview"
             android:hint="Opis"
@@ -233,8 +248,9 @@
             app:counterMaxLength="1000"
             app:counterTextColor="@color/hintColor"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/importanceRadioGroup">
+            app:layout_constraintTop_toBottomOf="@+id/filePicker">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/respDesc"
