--- a/app/src/main/res/layout/activity_responsibility_info.xml
+++ b/app/src/main/res/layout/activity_responsibility_info.xml
@@ -121,13 +121,28 @@
                 android:textColor="@color/white" />
         </com.google.android.material.textfield.TextInputLayout>
 
+        <Button
+            android:id="@+id/fileExplorer"
+            android:layout_width="240dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:background="@drawable/next_button"
+            android:padding="20dp"
+            android:text="Plik z zadaniem"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.497"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/dateDueId" />
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/descriptionId"
             style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="24dp"
             android:layout_marginEnd="20dp"
             android:background="@drawable/custom_textview"
             android:hint="Opis"
@@ -135,7 +150,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/dateDueId">
+            app:layout_constraintTop_toBottomOf="@+id/fileExplorer">
 
             <com.google.android.material.textfield.MaterialAutoCompleteTextView
                 android:id="@+id/noOfSubjectsTV"
