--- a/app/src/main/res/layout/recyclerview_task_row.xml
+++ b/app/src/main/res/layout/recyclerview_task_row.xml
@@ -1,7 +1,6 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginStart="10dp"
     android:layout_marginTop="10dp"
@@ -13,18 +12,18 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/rowLayout"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/cardBackground">
 
         <TextView
             android:id="@+id/cv_noteInfo"
-            android:layout_width="0dp"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:breakStrategy="simple"
             android:gravity="start"
             android:padding="12dp"
-            android:text="Zadanie\nAnaliza matematyczna\n\n\nTermin: 12/12/2022"
+            android:text="Zadanie\nAnaliza matematyczna\n\n\nTermin: 12/12/2022, 09:00"
             android:textColor="@color/white"
             android:textSize="16sp"
             android:textStyle="bold"
