--- a/app/src/main/res/layout/activity_add_new_profile.xml
+++ b/app/src/main/res/layout/activity_add_new_profile.xml
@@ -46,6 +46,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLength="70"
+            android:inputType="text"
             android:textAlignment="center"
             android:textColor="@color/white" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -62,7 +63,7 @@
         android:hint="Semestr"
         android:textColorHint="@color/hintColor"
         app:counterEnabled="true"
-        app:counterMaxLength="1"
+        app:counterMaxLength="2"
         app:counterTextColor="@color/hintColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -73,7 +74,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="number"
-            android:maxLength="1"
+            android:maxLength="2"
+            android:maxLines="1"
             android:textAlignment="center"
             android:textColor="@color/white" />
     </com.google.android.material.textfield.TextInputLayout>
