--- a/app/src/main/res/layout/activity_add_new_user.xml
+++ b/app/src/main/res/layout/activity_add_new_user.xml
@@ -45,6 +45,8 @@
             android:id="@+id/userName"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:inputType="text"
+            android:maxLines="1"
             android:textAlignment="center"
             android:textColor="@color/white" />
     </com.google.android.material.textfield.TextInputLayout>
