--- a/app/src/main/res/layout/activity_add_subject.xml
+++ b/app/src/main/res/layout/activity_add_subject.xml
@@ -23,7 +23,7 @@
             android:layout_marginTop="60dp"
             android:layout_marginEnd="20dp"
             android:background="@drawable/custom_textview"
-            android:hint="Liczba punktów ECTS za przedmiot"
+            android:hint="Liczba punktów ECTS za przedmiot (0-15)"
             android:textColorHint="@color/hintColor"
             app:counterEnabled="true"
             app:counterMaxLength="2"
