Structure and code refactor

--- a/app/src/main/res/layout/activity_add_responsibility.xml
+++ b/app/src/main/res/layout/activity_add_responsibility.xml
@@ -15,6 +15,7 @@
         android:focusable="true"
         android:focusableInTouchMode="true">
 
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/noteTitle"
             style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
@@ -23,13 +24,14 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="60dp"
             android:layout_marginEnd="20dp"
+            android:background="@drawable/custom_textview"
             android:hint="Nazwa zadania"
             android:textColorHint="@color/hintColor"
             app:counterEnabled="true"
             app:counterMaxLength="60"
             app:counterTextColor="@color/hintColor"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.495"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -41,7 +43,6 @@
                 android:textAlignment="center"
                 android:textColor="@color/white" />
         </com.google.android.material.textfield.TextInputLayout>
-
 
         <Spinner
             android:id="@+id/assignedSubjectTV"
@@ -196,8 +197,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="60dp"
             android:background="@drawable/custom_button2"
-            android:text="Wybierz plik"
             android:padding="15dp"
+            android:text="Wybierz plik"
             android:textColor="@color/white"
             android:textColorHint="@color/hintColor"
             android:textSize="16sp"
